# spacipy

./: .readthedocs.yaml  README.md  gem.py  mask.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
doc/: index.rst
docs/: _links.rst  conf.py  gem.rst  index.md  index.rst  requirements.txt  stoarr.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_sources/reference/: gem.rst
docs/_static/css/: custom.css
docs/intro/: basicusage.rst  coords3d_process.ipynb  gem_process.ipynb  gem_process.rst  install.rst  mip_plot.ipynb  mipplot.rst  quickstart.rst  stoarr_process.ipynb  stoarr_process.rst  tutorial.rst
intro/: examples.rst  install.rst  tutorial.rst
spacipy/: __init__.py  coords3d.py  gem.py  gem.py.bak  gemplot.py  mask.py  mipplot.py  segplot.py  stoarr.py  stoarr.py.bak
