[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spacipy"
version = "0.0.1"
authors = [
    {name = "Kai Han", email = "hankai@genomics.cn"},
]
description = "Collection of in-house python modules for some basic STOmic data processing and visualization."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["stereo-seq"]
license = {text = "GPL-3.0+"}
classifiers=[
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy>=1.22.4',
    'scipy>=1.9.0',
    'pandas>=1.4.3',
    'matplotlib>=3.6.2',
    'opencv-python>=4.6.0.66',
    'scikit-image>=0.19.2',
    'scikit-learn',
    'alphashape>=1.3.1',
    'anndata>=0.8.0',
]

